--- a/FCMLib/build.gradle
+++ b/FCMLib/build.gradle
@@ -5,13 +5,13 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 34
 
     defaultConfig {
-        minSdk 21
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        minSdk 23
+        targetSdkVersion 34
+        versionCode 2
+        versionName "2.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -34,17 +34,16 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-
-    implementation platform('com.google.firebase:firebase-bom:28.4.2')
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-messaging'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
 
 }
 
@@ -53,15 +52,15 @@ afterEvaluate {
         publications {
             release(MavenPublication) {
                 from components.release
-                groupId = 'com.github.Funsol-DevOps'
-                artifactId = 'PandaFCM' 
-                version = '1.5'
+                groupId = 'com.github.Funsol-Projects'
+                artifactId = 'Funsol-FCM'
+                version = '2.0'
             }
             debug(MavenPublication) {
                 from components.debug
-                groupId = 'com.github.Funsol-DevOps'
-                artifactId = 'PandaFCM'
-                version = '1.5'
+                groupId = 'com.github.Funsol-Projects'
+                artifactId = 'Funsol-FCM'
+                version = '2.0'
             }
         }
     }
