--- a/FCMLib/src/main/AndroidManifest.xml
+++ b/FCMLib/src/main/AndroidManifest.xml
@@ -4,9 +4,8 @@
     package="com.pandalibs.fcmlib">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--        <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"-->
-    <!--            tools:ignore="QueryAllPackagesPermission" />-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_REMOTE_MESSAGING" />
 
     <application android:allowBackup="true">
 
@@ -14,6 +13,7 @@
             android:name=".PandaFirebaseMessagingService"
             android:directBootAware="true"
             android:exported="true"
+            android:foregroundServiceType="remoteMessaging"
             tools:node="replace"
             tools:targetApi="n">
             <intent-filter android:priority="-500">
